fix(Styling): Fixing sponsor banner bleeding.

--- a/FrostAura.Clients.PointsKeeper/wwwroot/css/site.css
+++ b/FrostAura.Clients.PointsKeeper/wwwroot/css/site.css
@@ -183,3 +183,7 @@ tr {
 input[type=file] {
     display: none;
 }
+
+.collapse + #logo-banner {
+    display: none;
+}
